Move resources outside src
- Remove un-necessary schema and request files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
         "#components/*": ["./src/components/*"],
         "#config/*": ["./src/config/*"],
         "#request": ["./src/request"],
-        "#resources/*": ["./src/resources/*"],
+        "#resources/*": ["./resources/*"],
         "#schema": ["./src/schema"],
         "#ts": ["./src/ts"],
         "#utils/*": ["./src/utils/*"],
