--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "#resources/*": ["./resources/*"],
         "#schema": ["./src/schema"],
         "#re-map": ["./src/vendor/re-map"],
+        "#re-map/*": ["./src/vendor/re-map/*"],
         "#hooks": ["./src/hooks"],
         "#hooks/*": ["./src/hooks/*"],
         "#ts": ["./src/ts"],
