--- a/package.json
+++ b/package.json
@@ -151,8 +151,10 @@
         "workbox-webpack-plugin": "^5.1.3"
     },
     "dependencies": {
+        "@mapbox/mapbox-gl-draw": "^1.2.0",
         "@togglecorp/fujs": "^1.8.0",
         "@togglecorp/ravl": "^2.0.0",
+        "@togglecorp/re-map": "^0.0.2",
         "@turf/area": "^6.0.1",
         "@turf/bbox": "^6.0.1",
         "@turf/buffer": "^5.1.5",
